Added Perspective transform and updated Card Detection

--- a/cardDetection.ipynb
+++ b/cardDetection.ipynb
@@ -29,7 +29,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_parent(parent, i):\n",
+    "    if(parent[i]==  i):\n",
+    "        return i\n",
+    "    return find_parent(parent, parent[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shrink_array(cntsarray):\n",
+    "    finalcnts= []\n",
+    "    sumarray= (np.sum(np.sum(np.sum(cntsarray, axis= 1), axis= 1), axis= 1))\n",
+    "    print (sumarray)\n",
+    "    parent= np.arange(len(sumarray))\n",
+    "    print (parent)\n",
+    "    for i in range(len(sumarray)):\n",
+    "        for j in range(len(sumarray)):\n",
+    "            if(i!= j and abs(sumarray[i]-sumarray[j])<= 10):\n",
+    "                a= find_parent(parent, i)\n",
+    "                b= find_parent(parent, j)\n",
+    "                parent[b]= a\n",
+    "    for i in range(len(parent)):\n",
+    "        if(parent[i]== i):\n",
+    "            finalcnts.append(cntsarray[i])\n",
+    "    return finalcnts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flattener(image, pts, w, h):\n",
+    "    temp_rect = np.zeros((4,2), dtype = \"float32\")\n",
+    "    \n",
+    "    s = np.sum(pts, axis = 2)\n",
+    "\n",
+    "    tl = pts[np.argmin(s)]\n",
+    "    br = pts[np.argmax(s)]\n",
+    "\n",
+    "    diff = np.diff(pts, axis = -1)\n",
+    "    tr = pts[np.argmin(diff)]\n",
+    "    bl = pts[np.argmax(diff)]\n",
+    "\n",
+    "    # Need to create an array listing points in order of\n",
+    "    # [top left, top right, bottom right, bottom left]\n",
+    "    # before doing the perspective transform\n",
+    "\n",
+    "    if w <= 0.8*h: # If card is vertically oriented\n",
+    "        temp_rect[0] = tl\n",
+    "        temp_rect[1] = tr\n",
+    "        temp_rect[2] = br\n",
+    "        temp_rect[3] = bl\n",
+    "\n",
+    "    if w >= 1.2*h: # If card is horizontally oriented\n",
+    "        temp_rect[0] = bl\n",
+    "        temp_rect[1] = tl\n",
+    "        temp_rect[2] = tr\n",
+    "        temp_rect[3] = br\n",
+    "\n",
+    "    # If the card is 'diamond' oriented, a different algorithm\n",
+    "    # has to be used to identify which point is top left, top right\n",
+    "    # bottom left, and bottom right.\n",
+    "    \n",
+    "    if w > 0.8*h and w < 1.2*h: #If card is diamond oriented\n",
+    "        # If furthest left point is higher than furthest right point,\n",
+    "        # card is tilted to the left.\n",
+    "        if pts[1][0][1] <= pts[3][0][1]:\n",
+    "            # If card is titled to the left, approxPolyDP returns points\n",
+    "            # in this order: top right, top left, bottom left, bottom right\n",
+    "            temp_rect[0] = pts[1][0] # Top left\n",
+    "            temp_rect[1] = pts[0][0] # Top right\n",
+    "            temp_rect[2] = pts[3][0] # Bottom right\n",
+    "            temp_rect[3] = pts[2][0] # Bottom left\n",
+    "\n",
+    "        # If furthest left point is lower than furthest right point,\n",
+    "        # card is tilted to the right\n",
+    "        if pts[1][0][1] > pts[3][0][1]:\n",
+    "            # If card is titled to the right, approxPolyDP returns points\n",
+    "            # in this order: top left, bottom left, bottom right, top right\n",
+    "            temp_rect[0] = pts[0][0] # Top left\n",
+    "            temp_rect[1] = pts[3][0] # Top right\n",
+    "            temp_rect[2] = pts[2][0] # Bottom right\n",
+    "            temp_rect[3] = pts[1][0] # Bottom left\n",
+    "            \n",
+    "        \n",
+    "    maxWidth = 200\n",
+    "    maxHeight = 300\n",
+    "    dst = np.array([[0,0],[maxWidth-1,0],[maxWidth-1,maxHeight-1],[0, maxHeight-1]], np.float32)\n",
+    "    M = cv2.getPerspectiveTransform(temp_rect,dst)\n",
+    "    warp = cv2.warpPerspective(image, M, (maxWidth, maxHeight))\n",
+    "    return warp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,12 +176,14 @@
     "    plt.imshow(imarraycolor)\n",
     "    plt.title(\"Contours detected\")\n",
     "    plt.show()\n",
-    "    cv2.imwrite('./op.png', imarraycolor)\n"
+    "    cv2.imwrite('./op.png', imarraycolor)\n",
+    "    sumarray= (np.sum(np.sum(np.sum(cntsarray, axis= 1), axis= 1), axis= 1))\n",
+    "    return shrink_array(cntsarray)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -130,10 +236,21 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2897 2897 2899 2897 3969 3969 3969 3969 1446 1446 1446 1446 2448 2448\n",
+      " 2448]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n",
+      "4\n"
+     ]
     }
    ],
    "source": [
-    "card_detect('./im4.jpeg')"
+    "cntsarray= card_detect('./im4.jpeg')\n",
+    "print (len(cntsarray))"
    ]
   },
   {
@@ -141,7 +258,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#The code for getting flattened card (put in a loop)\n",
+    "# card = cntsarray[1]\n",
+    "# peri = cv2.arcLength(card,True)\n",
+    "# approx = cv2.approxPolyDP(card,0.01*peri,True)\n",
+    "# pts = np.float32(approx)\n",
+    "# x,y,w,h = cv2.boundingRect(card)\n",
+    "# warp = flattener(imarray, pts, w, h)\n",
+    "# warp1 = flattener(imarray, pts, w, h)[10:80, 5:35]\n",
+    "# plt.imshow(warp1)\n",
+    "# plt.show()"
+   ]
   }
  ],
  "metadata": {
