Final project completion.

--- a/randomforest.ipynb
+++ b/randomforest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_inputs():\n",
     "    X= []\n",
     "    Y= []\n",
-    "    for fold in os.listdir('./templates/ranks/'):\n",
-    "        for img in os.listdir(os.path.join('./templates/ranks/', fold)):\n",
-    "            imarray= np.array(cv2.imread('./templates/ranks/' + fold + '/' + img, 0))\n",
+    "    for fold in os.listdir('./templates1/ranks/'):\n",
+    "        for img in os.listdir(os.path.join('./templates1/ranks/', fold)):\n",
+    "            imarray= np.array(cv2.imread('./templates1/ranks/' + fold + '/' + img, 0))\n",
     "            fd, hog_image = hog(imarray, orientations=9, pixels_per_cell=(8, 8), \n",
     "                    cells_per_block=(2, 2), visualize=True, multichannel=False)\n",
     "            hog_image= np.reshape(hog_image, (1, hog_image.shape[0]*hog_image.shape[1]))[0]\n",
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_inputs2():\n",
     "    X= []\n",
     "    Y= []\n",
-    "    for fold in os.listdir('./templates/suits/'):\n",
-    "        for img in os.listdir(os.path.join('./templates/suits/', fold)):\n",
-    "            imarray= np.array(cv2.imread('./templates/suits/' + fold + '/' + img, 0))\n",
+    "    for fold in os.listdir('./templates1/suits/'):\n",
+    "        for img in os.listdir(os.path.join('./templates1/suits/', fold)):\n",
+    "            imarray= np.array(cv2.imread('./templates1/suits/' + fold + '/' + img, 0))\n",
     "            fd, hog_image = hog(imarray, orientations=9, pixels_per_cell=(8, 8), \n",
     "                    cells_per_block=(2, 2), visualize=True, multichannel=False)\n",
     "            hog_image= np.reshape(hog_image, (1, hog_image.shape[0]*hog_image.shape[1]))[0]\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -888,25 +888,25 @@
        "            max_depth=3, max_features='auto', max_leaf_nodes=None,\n",
        "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=500, n_jobs=None,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=1000, n_jobs=None,\n",
        "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf= RandomForestClassifier(n_estimators=500, max_depth=3, random_state=0)\n",
+    "clf= RandomForestClassifier(n_estimators=1000, max_depth=3, random_state=0)\n",
     "clf.fit(Xtrain, Ytrain)\n",
-    "qclf= RandomForestClassifier(n_estimators=500, max_depth=3, random_state=0)\n",
+    "qclf= RandomForestClassifier(n_estimators=1000, max_depth=3, random_state=0)\n",
     "qclf.fit(Xtrain2,Ytrain2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,13 +917,6 @@
     "f.close()\n",
     "qf.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
