--- a/handdetector.ipynb
+++ b/handdetector.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,32 +44,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_four_kind(cards, countmat):\n",
-    "    for i in range(len(countmat)):\n",
-    "        if(sum(countmat[i])== 4):\n",
+    "    for i in range(len(countmat[0])):\n",
+    "        if(sum(countmat[:, i])== 4):\n",
     "            return True\n",
     "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_full_house(cards, countmat):\n",
-    "    if(check_three_kind(cards, countmat) and check_pair(cards, countmat)):\n",
-    "        return True\n",
+    "    for i in range(len(countmat[0])):\n",
+    "        for j in range(len(countmat[0])):\n",
+    "            if(sum(countmat[:, i])== 3 and sum(countmat[:, j])== 2):\n",
+    "                return True\n",
     "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,54 +95,54 @@
     "    for i in range(0, 7):\n",
     "        if(sum(cardcounts[i:i+5])>= 5 and max(cardcounts[i:i+5])-min(cardcounts[i:i+5])<= 1):\n",
     "            return True\n",
-    "    if(sum(cardcounts[0:4]) + cardcounts[12]>= 5 and max(max(cardcounts[0:4]), cardcounts[12])-min(min(cardcounts[0:4]), cardcounts[12])<= 1):\n",
+    "    if(sum(cardcounts[0:4])+cardcounts[12]>= 5 and max(max(cardcounts[0:4]), cardcounts[12])-min(min(cardcounts[0:4]), cardcounts[12])<= 1):\n",
     "        return True\n",
     "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_three_kind(cards, countmat):\n",
-    "    for i in range(len(countmat)):\n",
-    "        if(sum(countmat[i])== 3):\n",
+    "    for i in range(len(countmat[0])):\n",
+    "        if(sum(countmat[:, i])== 3):\n",
     "            return True\n",
     "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_two_pairs(cards, countmat):\n",
-    "    for i in range(len(countmat)):\n",
-    "        for j in range(len(countmat)):\n",
-    "            if(i!= j and sum(countmat[i])== 2 and sum(countmat[j]== 2)):\n",
+    "    for i in range(len(countmat[0])):\n",
+    "        for j in range(len(countmat[0])):\n",
+    "            if(i!= j and sum(countmat[:, i])== 2 and sum(countmat[:, j]== 2)):\n",
     "                return True\n",
     "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_pair(cards, countmat):\n",
-    "    for i in range(len(countmat)):\n",
-    "        if(sum(countmat[i])== 2):\n",
+    "    for i in range(len(countmat[0])):\n",
+    "        if(sum(countmat[:, i])== 2):\n",
     "            return True\n",
     "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,8 +186,7 @@
     "        return \"pair\"\n",
     "    if(check_high_card(cards, countmat)):\n",
     "        return \"high card\"\n",
-    "    return \"bro just call it please!\"\n",
-    "\n"
+    "    return \"bro just call it please!\""
    ]
   }
  ],
